# docker-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.txt  vcpkg.json
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json
.devcontainer/base-scripts/: install-vcpkg.sh
src/: CMakeLists.txt
tests/: CMakeLists.txt  SimpleTest.cpp
